[project]
name = "doc-checks"
version = "0.3.0"
description = "Self-healing documentation checks, distributed as pre-commit hooks"
# ``Path.full_match`` (used for exclude-glob filtering) requires Python 3.13.
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.scripts]
doc-check = "doc_checks.runner:main"
doc-check-make-refs = "doc_checks.check_make_refs:main"
doc-check-cd-refs = "doc_checks.check_cd_refs:main"
doc-check-py-imports = "doc_checks.check_py_imports:main"
doc-check-trees = "doc_checks.check_trees:main"
doc-check-mermaid = "doc_checks.check_mermaid:main"

[dependency-groups]
dev = [
    "commitizen>=4.16.3",
    "pre-commit>=4.6.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"      # [project].version is the single source of truth
tag_format = "v$version"         # matches the `rev: vX.Y.Z` consumers pin
update_changelog_on_bump = true
major_version_zero = true        # 0.x: breaking changes bump minor, not major

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
